--- a/musique/musique/style/home.css
+++ b/musique/musique/style/home.css
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -75,14 +74,13 @@ h1 {
 }
 
 .cover-container {
-    display: flex;
-    align-items: center;
-    margin-right: 15px;
+    flex-shrink: 0;
+    margin-right: 20px;
 }
 
 #cover-image {
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
     border-radius: 10px;
     object-fit: cover;
 }
@@ -92,7 +90,6 @@ h1 {
     align-items: center;
     flex-grow: 1;
     justify-content: center;
-    margin: 0 20px;
 }
 
 .control-button {
@@ -118,6 +115,8 @@ h1 {
     align-items: center;
     flex-grow: 1;
     width: 100%;
+    padding: 0 10px;
+    justify-content: center;
 }
 
 #progress-bar {
@@ -144,9 +143,10 @@ h1 {
 }
 
 .volume-container {
+    flex-shrink: 0;
+    margin-left: auto;
     display: flex;
     align-items: center;
-    margin-left: auto;
 }
 
 #volume-bar {
