--- a/style/home.css
+++ b/style/home.css
@@ -101,3 +101,27 @@ h1 {
     display: inline-block;
     animation: blinkCaret 0.75s step-end infinite;
 }
+
+/* Style pour le footer */
+footer {
+    background-color: #f8f9fa;
+    padding: 20px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.footer-content {
+    display: inline-block;
+}
+
+.footer-link {
+    color: #007bff;
+    text-decoration: none;
+    margin: 0 10px;
+}
+
+.footer-link:hover {
+    text-decoration: underline;
+}
