--- a/faq/style/home.css
+++ b/faq/style/home.css
@@ -1,16 +1,14 @@
-/* styles.css */
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
+    background-color: #f4f4f4;
 }
 
 header {
-    background-color: #007BFF;
+    background-color: #444;
     color: white;
-    padding: 10px 20px;
+    padding: 15px;
     text-align: center;
     position: sticky;
     top: 0;
@@ -19,17 +17,25 @@ header {
 
 header h1 {
     margin: 0;
+    font-size: 24px;
 }
 
 .btn-back {
     display: inline-block;
     background-color: #ffffff;
-    color: #007BFF;
-    padding: 8px 15px;
+    color: #444;
+    padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
     margin-top: 10px;
     font-weight: bold;
+    transition: background-color 0.3s, color 0.3s;
+    font-size: 16px;
+}
+
+.btn-back:hover {
+    background-color: #444;
+    color: #ffffff;
 }
 
 .faq-container {
@@ -40,21 +46,26 @@ header h1 {
 .tabs {
     display: flex;
     justify-content: center;
-    border-bottom: 2px solid #007BFF;
+    border-bottom: 2px solid #888;
+    margin-bottom: 20px;
 }
 
 .tab-button {
-    background-color: #f1f1f1;
+    background-color: #f4f4f4;
     border: none;
     border-bottom: 2px solid transparent;
-    padding: 10px 20px;
+    padding: 15px 25px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    font-size: 18px;
+    color: #444;
+    transition: background-color 0.3s, border-bottom 0.3s, color 0.3s;
+    margin-right: 5px;
 }
 
 .tab-button.active {
     background-color: #ffffff;
-    border-bottom: 2px solid #007BFF;
+    border-bottom: 2px solid #444;
+    color: #444;
 }
 
 .tab-content {
@@ -68,4 +79,44 @@ header h1 {
 
 .tab-content h2 {
     margin-top: 0;
+    color: #444;
+    font-size: 20px;
+}
+
+.faq-item {
+    margin-bottom: 20px;
+}
+
+.accordion {
+    background-color: #f4f4f4;
+    color: #444;
+    cursor: pointer;
+    padding: 15px;
+    text-align: left;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    transition: background-color 0.3s, color 0.3s;
+    width: 100%;
+    border-radius: 5px;
+}
+
+.accordion.active, .accordion:hover {
+    background-color: #ddd;
+    color: #000;
+}
+
+.accordion-content {
+    padding: 0 15px;
+    max-height: 0;
+    overflow: hidden;
+    background-color: #fafafa;
+    transition: max-height 0.3s ease-out;
+    border-radius: 0 0 5px 5px;
+}
+
+.accordion-content p {
+    margin: 15px 0;
+    font-size: 16px;
+    color: #555;
 }
